fix vertical alignment in sidebar table

--- a/assets/sass/_theme/design-system/meta.sass
+++ b/assets/sass/_theme/design-system/meta.sass
@@ -21,6 +21,10 @@
 
         .taxonomy-title
             text-align: left
+    
+    &
+        > li:first-child
+            padding-top: 0
 
 @mixin meta-with-labels-columns
     &, .taxonomies > ul
